<resources>
    <string name="app_name">Week2</string>

    <string-array name="arr_section">
        <item>arts</item>
        <item>automobiles</item>
        <item>books</item>
        <item>business</item>
        <item>fashion</item>
        <item>food</item>
        <item>health</item>
        <item>home</item>
        <item>insider</item>
        <item>magazine</item>
        <item>movies</item>
        <item>nyregion</item>
        <item>obituaries</item>
        <item>opinion</item>
        <item>politics</item>
        <item>realestate</item>
        <item>sundayreview</item>
        <item>t-magazine</item>
        <item>travel</item>
        <item>upshot</item>
        <item>us</item>
        <item>world</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_of_story">Title of story</string>
    <string name="filter_search">Filter search</string>
    <string name="search">Search</string>
    <string name="no_result_wewe_found">No result wewe found!</string>
    <string name="begin_day">Begin day</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="sort_order">Sort order</string>
    <string name="relevance">Relevance</string>
    <string name="oldest">Oldest</string>
    <string name="newest">Newest</string>
    <string name="new_desk_value">New desk value</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="section">Section</string>
    <string name="end_date">End date</string>
    <string name="artical_search">Artical search</string>
    <string name="top_stories">Top stories</string>
    <string name="menu_filter">Menu filter</string>
    <string name="image">Image</string>
    <string name="top_stories_api">Top Stories API</string>
    <string name="title_of_paragraph">Title of paragraph</string>
    <string name="image_of_paragraph">Image of paragraph</string>
    <string name="overview">Overview</string>
    <string name="open_this_page_on_website">Open this page on website</string>
</resources>
