<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title_dl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorLauncher"
        android:gravity="center"
        android:text="@string/filter_search"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bgday"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="50dp"
        android:text="@string/begin_day"
        android:textColor="@color/colorTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_dl" />

    <EditText
        android:id="@+id/edt_bgdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:focusable="false"
        android:hint="@string/dd_mm_yyyy"
        android:inputType="none"
        android:textColor="@color/colorTxt"
        android:textColorHint="@color/colorTxtHint"
        android:theme="@style/MyEdtStyle"
        app:layout_constraintBottom_toBottomOf="@id/tv_bgday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/tv_bgday"
        app:layout_constraintTop_toTopOf="@id/tv_bgday"
        app:layout_constraintVertical_bias="0.416" />

    <TextView
        android:id="@+id/tv_end_day"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="20dp"
        android:text="@string/end_date"
        android:textColor="@color/colorTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bgday" />

    <EditText
        android:id="@+id/edt_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:focusable="false"
        android:hint="@string/dd_mm_yyyy"
        android:textColor="@color/colorTxt"
        android:textColorHint="@color/colorTxtHint"
        android:theme="@style/MyEdtStyle"
        app:layout_constraintBottom_toBottomOf="@id/tv_end_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_end_day"
        app:layout_constraintTop_toTopOf="@id/tv_end_day" />

    <TextView
        android:id="@+id/tv_sort_order"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="20dp"
        android:text="@string/sort_order"
        android:textColor="@color/colorTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_end_day" />

    <RadioGroup
        android:id="@+id/radg_sort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:backgroundTint="@color/colorLauncher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_sort_order"
        app:layout_constraintTop_toTopOf="@id/tv_sort_order">

        <RadioButton
            android:id="@+id/newest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/newest" />

        <RadioButton
            android:id="@+id/oldest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:checked="false"
            android:text="@string/oldest" />

        <RadioButton
            android:id="@+id/relevance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:checked="false"
            android:text="@string/relevance" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_round_corner"
        android:backgroundTint="@color/colorLauncher"
        android:padding="@dimen/default_margin"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radg_sort" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_round_corner"
        android:backgroundTint="#D4D0DB"
        android:padding="@dimen/default_margin"
        android:text="@string/cancel"
        android:textColor="@color/colorTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_save"
        app:layout_constraintTop_toTopOf="@id/btn_save" />

</androidx.constraintlayout.widget.ConstraintLayout>