<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorToolbar"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/menu_filter"
                android:onClick="onBtnBackClickListener"
                android:padding="15dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tvTbTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="start|center"
                android:maxLines="1"
                android:text="@string/top_stories_api"
                android:textColor="@color/colorTextTb"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                style="@style/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_of_paragraph" />

            <ImageView
                android:id="@+id/ivDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_of_paragraph"
                android:src="@drawable/image" />

            <TextView
                android:id="@+id/tv_lead_paragrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/btnViewWebsite"
                style="@style/buttonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/button_custom"
                android:gravity="center"
                android:onClick="clickOpenWebView"
                android:padding="@dimen/default_margin"
                android:text="@string/open_this_page_on_website" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>