<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title_dl_sories"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorLauncher"
        android:gravity="center"
        android:text="@string/filter_search"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_new_desk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/section"
        android:textColor="@color/colorTxt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_dl_sories" />

    <Spinner
        android:id="@+id/spinner_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:backgroundTint="@color/colorLauncher"
        android:gravity="center"
        android:textColor="@color/colorTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_new_desk"
        app:layout_constraintTop_toTopOf="@id/tv_new_desk" />

    <Button
        android:id="@+id/btn_save_section"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_round_corner"
        android:backgroundTint="@color/colorLauncher"
        android:padding="@dimen/default_margin"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel_section"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_cancel_section"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_round_corner"
        android:backgroundTint="#D4D0DB"
        android:padding="@dimen/default_margin"
        android:text="@string/cancel"
        android:textColor="@color/colorTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_save_section"
        app:layout_constraintTop_toTopOf="@id/btn_save_section" />

</androidx.constraintlayout.widget.ConstraintLayout>