<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#673AB7"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_search"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_search"
                android:tint="#FFFFFF" />

            <EditText
                android:id="@+id/edt_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="@string/search"
                android:background="@null"
                android:hint="@string/search"
                android:inputType="text"
                android:textColor="@color/colorTextSearch"
                android:textColorHint="@color/colorSeachHint"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/btn_filter"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:contentDescription="@string/menu_filter"
                android:padding="@dimen/default_margin"
                android:src="@drawable/ic_sort" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipRefreshSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_story_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="2"
            tools:listitem="@layout/item_story" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <TextView
        android:id="@+id/tv_search_null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/no_result_wewe_found"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>